# tiny-pao

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bench.yml
examples/: Cargo.toml
examples/src/: image.rs  softbuffer.rs  text_render.rs  white_window.rs
tiny_pao/: Cargo.toml
tiny_pao/src/: canvas.rs
tiny_pao/src/core/: color.rs
