[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "softbuffer"
path = "src/softbuffer.rs"

[[bin]]
name = "image"
path = "src/image.rs"

[[bin]]
name = "text_render"
path = "src/text_render.rs"

[dependencies]
cosmic-text = "0.17.1"
image = "0.25.9"
softbuffer = "0.4.8"
tiny-pao = { path = "../tiny_pao" }
winit = "0.30.12"
